--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
       - image: circleci/rust:latest
     steps:
       - checkout
+      - run: cargo --version
       - run: cargo test
 workflows:
   version: 2
