--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Version check
+      run: cargo --version
     - name: Build
       run: cargo build --verbose
     - name: Run tests
