[issue-27] build in CI with warnings as errors

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - checkout
       - run: cargo --version
+      - run: cargo build --features "strict"
       - run: cargo test
 workflows:
   version: 2
