--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["Jeremy D. Frens <jfrens@thecitybase.com>"]
 edition = "2018"
 
+[features]
+# Treat warnings as a build error.
+strict = []
+
 [dependencies]
 num-complex = "0.2.1"
 image = "0.21.1"
