--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ num-complex = "0.4"
 image = "0.24"
 lazy_static = "1.4"
 regex = "1.2"
-yaml-rust = "0.4"
+yaml-rust = { version = "0.9", package = "yaml-rust2" }
 
 [dev-dependencies]
 proptest = "1.1"
